tweaked a bit of styling to make sure the background image covers the full display area and changed the coloring and font size of the footer.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
   background-image: url("../css/world-map.jpg");
-  background-size: cover;
   background-repeat: no-repeat;
+  height: 100vh;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
@@ -23,16 +25,18 @@ h2 {
 }
 
 footer {
-  font-size: 12px;
-  color: rgba(0, 0, 0, 0.6);
+  font-size: 14px;
+  color: whitesmoke;
+  padding-bottom: 15px;
+  margin-top: 5px;
 }
 a {
-  color: #1b1b41;
+  color: antiquewhite;
 }
 
 .container {
   max-width: 600px;
-  margin: 60px auto;
+  margin: 60px auto 10px auto;
   background-color: whitesmoke;
   padding: 30px;
   box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
